Project-001-Roman-Numerals-Converter/cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This template is for my Project. This template creates Python Flask Web Application on Amazon Linux 2 
  (ami-0cff7528ff583bf9a) EC2 Instance with custom security group allowing
  http connections on port 80 and SSH connection on port 22. 
  Roman Numerals Converter Application is downloaded from Github repository, 
  then installed on Flask.
Parameters:
  KeyName:
    Description: Enter the name of your Key Pair for SSH connections.
    Type: AWS::EC2::KeyPair::KeyName
  
Resources:
  WebServerSecurityGroup: #Logical ID, creating security group
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable HTTP for flask web server and SSH port to secure reach to my EC2" # Required
      SecurityGroupIngress: # SecurityGroupIngress is for inbound rules.
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp #required
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  WebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0cff7528ff583bf9a
      InstanceType: t2.micro
      KeyName: !Ref KeyName #Ref for key pair
      SecurityGroupIds:
        - !Ref WebServersecurityGroup #Ref for security group to not create again
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} ##It gets stack name after creation of stack
      UserData: !Base64 |
          #! /bin/bash
          yum update -y
          yum install python3 -y
          pip3 install flask
          cd /home/ec2-user
          wget -P templates https://raw.githubusercontent.com/Hvlkrs/MyAWSProjects/master/Project-001-Roman-Numerals-Converter/templates/index.html
          wget -P templates https://raw.githubusercontent.com/Hvlkrs/MyAWSProjects/master/Project-001-Roman-Numerals-Converter/templates/result.html
          wget https://raw.githubusercontent.com/Hvlkrs/MyAWSProjects/master/Project-001-Roman-Numerals-Converter/app.py
          python3 app.py

Outputs:
  WebSiteURL:
    Value: !Sub
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Roman Numerals Converter Application URL
